k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calorie-ingress
  namespace: calorie-tracker
spec:
  ingressClassName: nginx
  rules:
    - host: calorie-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
  # tls:
  #   - hosts:
  #       - calorie-tracker.local
  #     secretName: calorie-tls
